flexbox cleanup - drop some 'initial' resets since they have no effect anyway

--- a/scss/component/_media.scss
+++ b/scss/component/_media.scss
@@ -55,7 +55,7 @@
         .media-left,
         .media-right,
         .media-body {
-            display: block;
+            display: initial;
             overflow: initial;
             vertical-align: initial;
         }
