normalize content section names

--- a/docs/assets/scss/_examples.scss
+++ b/docs/assets/scss/_examples.scss
@@ -211,7 +211,7 @@
     min-width: 250px;
     max-width: 500px;
 }
-.container-viewport .tooltip .tooltip-inner {
+.container-viewport .tooltip .tooltip-body {
     min-width: 250px;
     max-width: 500px;
     min-height: 100px;
