--- a/scss/component/_tooltip.scss
+++ b/scss/component/_tooltip.scss
@@ -32,7 +32,7 @@
 }
 
 // Wrapper for the tooltip content
-.tooltip-inner {
+.tooltip-body {
     max-width: $tooltip-max-width;
     padding: $tooltip-padding-y $tooltip-padding-x;
     color: $tooltip-color;
