Alter margins on sidebar

--- a/docs/assets/scss/docs.scss
+++ b/docs/assets/scss/docs.scss
@@ -169,8 +169,10 @@ $docs-color: #246;
 
 // Sidenav
 .cf-sidebar {
+    margin-bottom: 3rem;
+
     .nav {
-        margin-top: -.2rem;
+        margin-top: -.25rem;
     }
 
     .nav-link {
