--- a/docs/assets/css/docs.css
+++ b/docs/assets/css/docs.css
@@ -188,8 +188,12 @@
   margin-bottom: .25rem;
 }
 
+.cf-sidebar {
+  margin-bottom: 3rem;
+}
+
 .cf-sidebar .nav {
-  margin-top: -.2rem;
+  margin-top: -.25rem;
 }
 
 .cf-sidebar .nav-link {
