Update copy and add link to preview site

--- a/components/media-object/index.html
+++ b/components/media-object/index.html
@@ -63,7 +63,10 @@
 <body>
     <a class="skipnav" href="#content">Skip to main content</a>
 
-    <header class="navbar navbar-full navbar-dark cf-header">
+    <div class="bg-cyan-500 text-center font-weight-bold p-1">
+<a href="https://figuration-org.github.io/figuration-preview/" class="text-light">Figuration v3 Preview Available!</a>
+</div>
+<header class="navbar navbar-full navbar-dark cf-header">
     <div class="container">
         <nav>
             <a class="navbar-brand" href="/">CAST Figuration</a>
@@ -640,7 +643,7 @@
             <li><a href="https://twitter.com/figuration_org">Twitter</a></li>
         </ul>
         <p>
-            &copy; 2013-2016 <a href="http://www.cast.org">CAST, Inc.</a>
+            &copy; 2013-2017 <a href="http://www.cast.org">CAST, Inc.</a>
             <br />
             Portions: &copy; 2011-2016 the Bootstrap Authors and Twitter, Inc. Licensed under <a href="https://github.com/twbs/bootstrap/blob/master/LICENSE">the MIT license</a> or <a href="https://github.com/twbs/bootstrap/blob/master/docs/LICENSE">CC BY 3.0</a>.
         <p>
