normalize some heights

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -749,7 +749,7 @@ $nav-pills-active-bg:           $active-bg !default;
 $navbar-padding-x:                  $spacer !default;
 $navbar-padding-y:                  ($spacer / 2) !default;
 
-$navbar-item-padding-y:             .425rem !default;
+$navbar-item-padding-y:             .4375rem !default;
 
 $navbar-brand-padding-y:            .25rem !default;
 $navbar-brand-margin-x:             1rem !default;
@@ -758,7 +758,7 @@ $navbar-brand-font-weight:          $font-weight-bold !default;
 
 $navbar-divider-width:              $border-width !default;
 $navbar-divider-color:              rgba(0,0,0,.65) !default;
-$navbar-divider-padding-y:          .425rem !default;
+$navbar-divider-padding-y:          $navbar-item-padding-y !default;
 
 $navbar-toggler-font-size:          1.25rem !default;
 $navbar-toggler-padding-y:          .5rem !default;
