use mixin for clearfix reset

--- a/scss/component/_button-group.scss
+++ b/scss/component/_button-group.scss
@@ -93,10 +93,7 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: flex-start;
-
-        &::after {
-            content: none;
-        }
+        @include clearfix-disable();
 
         .btn-group,
         .input-group {
