--- a/docs/_includes/nav-main.html
+++ b/docs/_includes/nav-main.html
@@ -5,7 +5,7 @@
             <span class="icon-menu" aria-hidden="true">&#8801;</span>
         </button>
         <div class="navbar-collapse collapse" id="cf-topnav">
-            <ul class="nav navbar-nav">
+            <ul class="navbar-nav">
                 <li class="nav-item">
                     <a href="{{ site.baseurl }}/get-started/quick-start/" class="nav-link {% if page.group == "get-started" %}active{% endif %}">Get Started</a>
                 </li>
