--- a/scss/component/_navbar.scss
+++ b/scss/component/_navbar.scss
@@ -33,6 +33,7 @@
     margin-right: $navbar-brand-margin-x;
     font-size: $navbar-brand-font-size;
     font-weight: $navbar-brand-font-weight;
+    line-height: inherit;
     text-decoration: none;
     white-space: nowrap;
     align-self: flex-start;
