fix divider, dropdown, and breakpoints

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -758,6 +758,7 @@ $navbar-brand-font-weight:          $font-weight-bold !default;
 
 $navbar-divider-width:              $border-width !default;
 $navbar-divider-color:              rgba(0,0,0,.65) !default;
+$navbar-divider-padding-x:          $navbar-item-padding-x !default;
 $navbar-divider-padding-y:          $navbar-item-padding-y !default;
 
 $navbar-toggle-font-size:           1.25rem !default;
